[package]
name = "dis_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features=["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
futures = "0"
zookeeper-async = "4"
anyhow = "1"
log = "0"
env_logger = "0"
const-str = "0"
libp2p = "0"
async-trait = "0.1"
bincode = "1.3.3"
